# beam

./: .gitignore  README.md
backend/server/: Dockerfile  pyproject.toml
backend/server/beam_server/: cli.py  routes.py
backend/website/: Dockerfile  app.py  pyproject.toml
backend/website/templates/: index.html
client/: pyproject.toml
client/beam/: cli.py
manifests/: deploy.sh  deployment.yaml  ingress.yaml  namespaces.yaml  service.yaml
